kemal/kubernetes/ders-yaml-dosyalari/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devopsyolu


# kubectl create namespace devopsyolu
