kemal/kubernetes/ders-yaml-dosyalari/16-configmap-secret.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-secret-demo
  namespace: devopsyolu
  labels:
    app: config-secret-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-secret-demo
  template:
    metadata:
      labels:
        app: config-secret-demo
    spec:
      containers:
        - name: config-secret-demo-container
          image: busybox:latest
          command: ["/bin/sh","-c","echo $APP_NAME -- $APP_ENV -- DB_PASSWORD:$DB_PASSWORD && sleep 3600"]
