kemal/kubernetes/ders-yaml-dosyalari/9-statefulset-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: demo-postgres
  namespace: devopsyolu
  labels:
    app: demo-postgres
spec:
  serviceName: "demo-postgres-svc"
  replicas: 2
  selector:
    matchLabels:
      app: demo-postgres
  template:
    metadata:
      labels:
        app: demo-postgres
    spec:
      containers:
        - name: postgres-container
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "standard"
        resources:
          requests:
            storage: 1Gi
