kemal/kubernetes/ders-yaml-dosyalari/10-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-postgres-svc
  namespace: devopsyolu
spec:
  type: ClusterIP
  selector:
    app: demo-postgres
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: demo-web-svc
  namespace: devopsyolu
spec:
  type: ClusterIP
  selector:
    app: demo-web
  ports:
    - port: 80
      targetPort: 80
