kemal/kubernetes/ders-yaml-dosyalari/11-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-web-ingress
  namespace: devopsyolu
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-web-svc
                port:
                  number: 80
